# BiByFi

./: .gitignore  Makefile  README.md  Satyristes  bibyfi-IEEETran.satyh  bibyfi-IEEETrans.satyh  bibyfi.satyh  example-bib.satyh  example.saty  satysfi-bibyfi-doc.opam  satysfi-bibyfi.opam
doc/: Makefile  doc.saty  local.satyh
example/: Makefile  cite-as-number.saty  cite-with-name.saty
